--- a/css/scss/global/_containers.scss
+++ b/css/scss/global/_containers.scss
@@ -1,3 +1,33 @@
 /*------------------------------------*\
     $CONTAINER STYLES
 \*------------------------------------*/
+
+.hero-content {
+    height: 100vh;
+    position: relative;
+}
+
+.hero-section.has-featured-image {
+    background-size: cover;
+    background-position-x: center;
+}
+
+.center-container {
+    position: absolute;
+    width: 100%;
+    bottom: 25%;
+    text-align: center;
+}
+
+.section-image {
+    background-size: cover;
+    background-position: center;
+}
+
+.general-section {
+    margin: 25vh 0;
+    .section-image {
+	    height: 50vh;
+	    min-height: 300px;
+	}
+}
