--- a/css/scss/config/_mixins.scss
+++ b/css/scss/config/_mixins.scss
@@ -2,6 +2,22 @@
     $MIXINS
 \*------------------------------------*/
 
+@function pow($number, $exponent) {
+  $value: 1;
+
+  @if $exponent > 0 {
+    @for $i from 1 through $exponent {
+      $value: $value * $number;
+    }
+  } @else if $exponent < 0 {
+    @for $i from 1 through -$exponent {
+      $value: $value / $number;
+    }
+  }
+
+  @return $value;
+}
+
 @mixin transition($transition-property, $transition-time, $method:null) {
 	/* transition mixin */
 	-webkit-transition: $transition-property $transition-time $method;
