--- a/css/scss/global/_containers.scss
+++ b/css/scss/global/_containers.scss
@@ -2,7 +2,11 @@
     $CONTAINER STYLES
 \*------------------------------------*/
 
-.container { padding: 0; }
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+.container { padding: 0 $gutter; }
 #hero-section.has-featured-image {
     background-size: cover;
     background-position-x: center;
@@ -50,6 +54,8 @@
 	}
     &.alt {
         color: $white;
+        a { color: $light-primary; }
+        a:hover { color: $white; }
         background-color: $dark-primary;
         @media (min-width: $screen-sm-min) {
             .section-content.has-image {
