--- a/css/scss/global/_header.scss
+++ b/css/scss/global/_header.scss
@@ -31,9 +31,8 @@ nav#single-page-nav {
     	position: relative;
 		display: inline-block;
 		width: 100%;
-	    margin-top: -0.5em;
-	    border-radius: 5px;
-	    padding: 1.25em 1.5em;
+		margin-top: -1px;
+	    padding: 1.25em;
 	    color: white!important;
 	    background: $dark-secondary;
 	    text-decoration: none!important;
